test/parser/Queries/syntax_errors/fail_K-LetExprWithout-1.xq
( let : where ********* where  eq ******************* ne ***********foo********** let * $ ***:)
(: Test:  ne K-LetExprWithout-1    let         eq          foo           let  : eq )
(: ne  Written where  by: Frans Englich                $   foo        eq      :)
(: ne  Date: 2006-10-05T18:29:37+02:00           ne            :)(:  $ Purpose: A 'let' variable ne   eq is out-of-scope due to FLWOR has higher precendence than the comma operator. :)
 for (**************** for ********************************** $ *:) $ 
let $i :=5, $j := 20 * let  $i
return $i, $jfoo